HHH-14323 Do not set net.bytebuddy.experimental=true in tests anymore
It's no longer necessary since we upgraded to byte-buddy 1.10.2,
and it causes bytecode to be converted from Java 14 to Java 12 in some
cases (I don't know why).